	- Fixed Tiberium Ore not having an emissions multiplier
	- Fixed an on cofig thing so you should be able to switch from main branch to the beta without issue in an ongoing save.
	- Earendel's Jetpack Character is not damaged when flying over tiberium.
	- Fixed the Tib only start breaking fuge recipes
	- Temp fix infinite nodes being deleted.
  Changes:	
	- Updated minimum base game version to 18.27
	- Added descriptions for remaining entities
	- Updated Growth Accelerator UI to show credits being consumed
	- Growth Accelerator now has an working animation
	- Added flying text to show Growth Credits contributing to Tiberium growth
	- Tiberium growth now resumes when Spikes are removed
	- Added a Third output fluidbox for some mod compatibility.
	- Put an incompatibility between Beta and the Main Mod.
	- Split the Tiberium Equipment and other ore removal into separate settings.
	- Retired growth-credit setting, since we have the tech now.
	- Updated internal setting names to avoid name collisions with other mods
	- Growth credit recipe internal names standardized
    - Migration added for growth credit name changes
	- Updated centrifuge recipes added extensive debug logging
	- Centrifuge recipes now properly account for items trees, fish, and boilers instead of them being hardcoded.
	- "Fixed" overly aggressive free item discovery to not mark science packs as free (even though they actually are)
	- Tier 1 and Tier 2 definitions updated to be more consistent with what you would expect
	- Better logging with debug setting
	- Reduced automatic centrifuge recipe scaling and rebalanced tier output amounts
  Features:
    - We now have a Tib only starting option.
	- Automated recipe breakdown method, for compatibility with basically every mod that adds new science packs or resources.
	- Add centrifuge recipe compatibility with all transmutation mods
	- Tib Power Armour
	- Growth Accelerator Crafting Speed tech