@@ -11,6 +11,7 @@ Version: 0.1.13
 	- Earendel's Jetpack Character is not damaged when flying over tiberium.
 	- Fixed the Tib only start breaking fuge recipes
 	- Temp fix infinite nodes being deleted.
+	- Fixed tiberium in trash slots not damaging you.
   Changes:	
 	- Updated minimum base game version to 18.27
 	- Added descriptions for remaining entities
